style: avoid Layout overflow caused by border

--- a/components/Layout/style/index.less
+++ b/components/Layout/style/index.less
@@ -51,11 +51,12 @@
     }
 
     &-trigger {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       box-sizing: border-box;
       width: 100%;
       height: @layout-trigger-height;
-      line-height: @layout-trigger-height;
-      text-align: center;
       background: @layout-trigger-dark-color;
       color: var(~'@{arco-cssvars-prefix}-color-white');
       cursor: pointer;
